bot/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: deploy-notify-bot
  namespace: deploy-notify-bot-cop
  labels:
    app.kubernetes.io/name: deploy-notify-bot
    app.kubernetes.io/instance: deploy-notify-bot-cop
    app.kubernetes.io/part-of: deploy-notify-bot
spec:
  to:
    kind: Service
    name: deploy-notify-bot
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
